Bug 154503 - Kickoff does not update itself when add / remove / change programs
Summary: Kickoff does not update itself when add / remove / change programs
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-kickoff (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 155859 157740 160303 161520 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-12-23 00:55 UTC by Gabriel C
Modified: 2008-05-25 17:34 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriel C 2007-12-23 00:55:02 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc 4.2.2 
OS:                Linux

Hi,

when one installs or removes applications or say desktop file changed ( icons or whatever else ) kickoff won't update itself.

Actually one need to restart plasma to get kickoff to update his items.
 
(  asegio confirmed that on irc some days ago , I just forgot to report it )

Regards,

Gabriel
Comment 1 Gabriel C 2007-12-23 00:57:40 UTC
Same problem exists for the classic menu , shall I open an different bug report for it ?
Comment 2 Alex Merry 2007-12-23 14:30:16 UTC
No: fixing one will fix the other (they share the code for getting applications)
Comment 3 Sebastian Sauer 2008-02-20 00:21:24 UTC
*** Bug 155859 has been marked as a duplicate of this bug. ***
Comment 4 Sokraates 2008-03-06 10:34:07 UTC
Just for completeness' sake, I confirm this on Kubuntu Gutsy KDE 4.0.0 and 4.0.1 as well as Kubuntu Hardy KDE 4.0.2.
Comment 5 Sebastian Sauer 2008-03-10 02:07:40 UTC
*** Bug 157740 has been marked as a duplicate of this bug. ***
Comment 6 Aaron J. Seigo 2008-04-04 16:49:11 UTC
*** Bug 160303 has been marked as a duplicate of this bug. ***
Comment 7 Pino Toscano 2008-05-02 12:56:58 UTC
*** Bug 161520 has been marked as a duplicate of this bug. ***
Comment 8 Jason Stubbs 2008-05-24 16:05:56 UTC
Patch available on the review board (http://reviewboard.vidsolbach.de/dashboard/)
Comment 9 Jason Stubbs 2008-05-25 17:34:21 UTC
SVN commit 812490 by jstubbs:

Clear the application cache when sycoca signals that services have changed.

BUG: 154503


 M  +9 -0      applicationmodel.cpp  
 M  +1 -0      applicationmodel.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=812490