Clear the application cache when sycoca signals that services have changed.

BUG: 154503

svn path=/trunk/KDE/kdebase/workspace/; revision=812490